# tdd-gol

./: .gitconfig  README.md  pyproject.toml
tdd_gol/: __init__.py  __main__.py  factories.py
tests/: test_gol.py
