[tool.poetry]
name = "tdd-gol"
version = "0.1.0"
description = ""
authors = ["Walter Vos <walter.vos@ns.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes="Describe*"
python_functions="it_*"